<resources>
    <string name="app_name">CIS298Assignment2</string>

    <string name="action_settings">Settings</string>

    <!--These are for widgets that never change their text.-->
    <string name="convert_text_view">Convert:</string>
    <string name="from_text_view">From</string>
    <string name="to_text_view">To</string>
    <string name="celsius_radiobutton">Celsius</string>
    <string name="fahrenheit_radiobutton">Fahrenheit</string>
    <string name="kelvin_radiobutton">Kelvin</string>
    <string name="rankin_radiobutton">Rankin</string>
    <string name="convert_button">CONVERT</string>
    <!-- -->

    <string name="error_no_input">You must enter a temperature!</string>
    <string name="error_scales_not_selected">You must select the temperature scales to convert between!</string>



</resources>
