<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" >

    <TextView
        android:id="@+id/convert_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert_text_view"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/temperature_input"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:maxLength="9"
        android:inputType="number"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioGroup
            android:id="@+id/from_temperatures_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/from_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_text_view"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/from_celsius_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/celsius_radiobutton"/>

            <RadioButton
                android:id="@+id/from_fahrenheit_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fahrenheit_radiobutton"/>

            <RadioButton
                android:id="@+id/from_kelvin_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kelvin_radiobutton"/>

            <RadioButton
                android:id="@+id/from_rankin_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rankin_radiobutton"/>
        </RadioGroup>

        <RadioGroup
            android:id="@+id/to_temperatures_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/to_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_text_view"
                android:textSize="20dp"/>

            <RadioButton
                android:id="@+id/to_celsius_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/celsius_radiobutton"/>

            <RadioButton
                android:id="@+id/to_fahrenheit_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fahrenheit_radiobutton"/>

            <RadioButton
                android:id="@+id/to_kelvin_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kelvin_radiobutton"/>

            <RadioButton
                android:id="@+id/to_rankin_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rankin_radiobutton"/>
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/convert_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/convert_button"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/conversion_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/formula_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

</LinearLayout>
